# cargo-craft

./: .cspell.json  .gitignore  Cargo.toml  build-install.sh  build.rs  cargo-cli-errors.rs  cargo-craft.sh  go  test
cargo-craft/: cli.rs  errors.rs  helpers.rs  lib.rs  shell.rs  templates.rs
cargo-craft/templates/: Cargo.toml.tera  Cargo.workspace.toml.tera  cli.rs.tera  errors.rs.tera  lib.rs.tera  lib_cli.rs.tera
src/: cargo_manifest.rs  cli.rs  dependencies.rs  errors.rs  helpers.rs  lib.rs  main.rs  templates.rs
src/files/: Cargo.toml
src/templates/: Cargo.toml.tera  bare.main.rs.tera  bare.mod.cli.rs.tera  cli.rs.tera  errors.rs.tera  lib.rs.tera  lib_dispatch.rs.tera  rust-toolchain.toml.tera  {{package_name}}.rs.tera
test/: Cargo.toml
test/cli/: errors.rs  test.rs
