cargo-features = ["per-package-target"]

[package]
name = "cargo-craft"
version = "0.0.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
tera = { version = "1.20.0", features = ["preserve_order"] }
toml = { version = "0.9.2", features = ["preserve_order", "display"] }
iocore = "3.0.3"
sanitation = { version = "1.0.0" }
serde = { version = "1.0.213", features = ["derive"] }
regex = "1.11.0"

[build-dependencies]
iocore = "3.0.3"


[lib]
name = "cargo_craft"
path = "src/lib.rs"

[[bin]]
name = "cargo-craft"
path = "src/main.rs"
