cargo-features = ["edition2024"]

[package]
name = "test"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autobenches = false

[[package.bin]]
name = "test"
path = "cli/test.rs"
doctest = false
bench = false
doc = false

[package.metadata]
cargo-args = [
    "-Zmtime-on-use",
    "-Zavoid-dev-deps",
]

[package.lib]
name = "test"
path = "test/test.rs"
doctest = false
bench = false
doc = false

[dependencies]
